=== 0.0.2 / 2009-10-28

* Added multi-parser utility
* Fixed several bugs involving parsing and formatting

=== 0.0.1 / 2009-10-28

* Initial test release