@@ -1,7 +1,8 @@
 === 0.0.2 / 2009-10-28
 
-* Added multi-parser utility
-* Fixed several bugs involving parsing and formatting
+* Added multi-parser utility.
+* Fixed several bugs involving parsing and formatting.
+* Logger uses activesupport's SecureRandom on Ruby 1.8 if available.
 
 === 0.0.1 / 2009-10-28
 
